Remove Firebase implementation Added parsing for JSON DDs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btnCA">Heavy Cruisers(CA)</string>
     <string name="btnBB">Battleships/Battle cruisers(BB/BC)</string>
     <string name="btnCV">Carriers/Light Carriers(CV/CVL)</string>
+    <string name="btnDownload">Debug</string>
 </resources>
