--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="btnSelectShip">-- Select your Shipfu --</string>
     <string name="btnSelectWeapon">-- Select your Weapon --</string>
     <string name="lblEnhance">Enhance: +%1$d</string>
+    <string name="lblMainDMG">Base Damage: %1$.2fx%2$d</string>
+    <string name="lblMainRoF">Base RoF: %1$.2f s</string>
+    <string name="lblMainCoeff">Coefficient: %1$.0f%2$s</string>
+    <string name="lblMainAmmo">Ammo: %1$s</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
