--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,18 @@
     <string name="btnSelectShip">-- Select your Shipfu --</string>
     <string name="btnSelectWeapon">-- Select your Weapon --</string>
     <string name="lblEnhance">Enhance: +%1$d</string>
+
+    <string name="lblMainGun">= Main Gun Overview =</string>
     <string name="lblMainDMG">Base Damage: %1$.2fx%2$d</string>
     <string name="lblMainRoF">Base RoF: %1$.2f s</string>
     <string name="lblMainCoeff">Coefficient: %1$.0f%2$s</string>
     <string name="lblMainAmmo">Ammo: %1$s</string>
+
+    <string name="lblMainGunDps">= Main Gun DPS =</string>
+    <string name="lblMainGunBB">= Full Burst Damage =</string>
+    <string name="lblMainGunDpsNum">%1$.2f for Light Armor\n
+                                    %2$.2f for Medium Armor\n
+                                    %3$.2f for Heavy Armor\n</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
