--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,15 @@
     <string name="btnDownload">Debug</string>
     <string name="lblNameShip">No Ship Name</string>
     <string name="descriptorImage">No description found</string>
+    
     <string name="btnSelectShip">-- Select your Shipfu --</string>
     <string name="btnSelectWeapon">-- Select your Weapon --</string>
+
+    <string-array name="gunTypeMain">
+        <item>DD</item>
+        <item>CL</item>
+    </string-array>
+
     <string name="lblEnhance">Enhance: +%1$d</string>
 
     <string name="lblMainGun">= Main Gun Overview =</string>
